--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Landing page for nature tour website clone",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+
   },
   "repository": {
     "type": "git",
