--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css"
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.comp.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css" 
   },
   "repository": {
     "type": "git",
@@ -20,11 +24,14 @@
     "url": "https://github.com/yoichimichael/natours/issues"
   },
   "homepage": "https://github.com/yoichimichael/natours#readme",
-  "dependencies": {},
+  "dependencies": {
+    "postcss": "^8.2.6"
+  },
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "concat": "^1.0.3",
     "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.3.1"
   }
 }
